@@ -58,6 +58,24 @@ Download your credentials from Windows Azure. Logs you in to the Azure portal an
     azure account import [file]
 Imports previously downloaded credentials
 
+### azure account affinity-group - Manage Azure Affinity Groups
+
+You can create and manage affinity groups.
+
+    azure account affinity-group list
+Lists all your affinity groups
+
+    azure account affinity-group create [name]
+Creates a new affinity group
+
+**--location** - Location for the affinity group 
+
+    azure account affinity-group show [name]
+Display details about an affinity group
+
+    azure account affinity-group delete [name]
+Removes the affinity group
+
 ### azure account storage - Manage Azure Storage accounts
 
 You can create and manage store accounts for leveraging blobs, tables and queues within your applications.
