@@ -244,6 +244,67 @@ exports.init = function (cli) {
       listLAG('AffinityGroups', options, callback);
     });
 
+  affinityGroup.command('create <name>')
+    .description('Creates an affinity group')
+    .option('-s, --subscription <id>', 'use the subscription id')
+    .option('-l, --location <name>', 'location of the data center')
+    .option('-e, --label <label>', 'affinity group label')
+    .option('-d, --description <description>', 'affinity group description')
+    .execute(function (name, options, callback) {
+      var channel = utils.createServiceManagementService(cli.category('account').lookupSubscriptionId(options.subscription),
+          cli.category('account'), log);
+
+      var affinityGroupOptions = {
+        Label: options.label,
+        Description: (typeof options.description === 'string' ? options.description : undefined),
+        Location: options.location
+      };
+
+      var progress = cli.progress('Creating affinity group');
+      utils.doServiceManagementOperation(channel, 'createAffinityGroup', name, affinityGroupOptions, function (error, response) {
+        progress.end();
+
+        callback(error);
+      });
+    });
+
+  affinityGroup.command('show <name>')
+    .description('Show details about an affinity group')
+    .option('-s, --subscription <id>', 'use the subscription id')
+    .execute(function (name, options, callback) {
+      var channel = utils.createServiceManagementService(cli.category('account').lookupSubscriptionId(options.subscription),
+          cli.category('account'), log);
+
+      var progress = cli.progress('Fetching details about affinity group');
+      utils.doServiceManagementOperation(channel, 'getAffinityGroup', name, function(error, response) {
+        progress.end();
+        if (!error) {
+          delete response.body['@']; // skip @ xmlns and @ xmlns:i
+          if (log.format().json) {
+            log.json(response.body);
+          } else {
+            utils.logLineFormat(response.body, log.data);
+          }
+        }
+        callback(error);
+      });
+    });
+
+  affinityGroup.command('delete <name>')
+    .description('Deletes an affinity group')
+    .option('-s, --subscription <id>', 'use the subscription id')
+    .execute(function (name, options, callback) {
+      var channel = utils.createServiceManagementService(cli.category('account').lookupSubscriptionId(options.subscription),
+          cli.category('account'), log);
+
+      var progress = cli.progress('Deleting affinity group');
+      utils.doServiceManagementOperation(channel, 'deleteAffinityGroup', name, function (error, response) {
+        progress.end();
+
+        callback(error);
+      });
+    });
+
   function listLAG(what, options, callback) {
     var channel = utils.createServiceManagementService(cli.category('account').lookupSubscriptionId(options.subscription),
       cli.category('account'), log);
