@@ -1,3 +1,5 @@
+* Adding support for creating and deleting affinity groups
+
 2012.12.22 - Version 0.6.10
 * Fix require issue with unix based systems
 * Fix issue with deployment scripts
